--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,44 @@
-.App {
+.app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+}
+
+h4 {
+  text-transform: uppercase;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
+.app .plate {
+  width: 90%;
+  margin-right: 0;
+  max-width: 500px;
   padding: 20px;
-  color: white;
+  margin-bottom: 100px;
 }
 
-.App-title {
-  font-size: 1.5em;
+.form__body .form-field:last-of-type {
+  padding-bottom: 0 !important;
 }
 
-.App-intro {
-  font-size: large;
+.form .button {
+  display: block;
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+@media screen and (max-width: 47.9375em) {
+  .app {
+    display: block;
+    height: auto;
+  }
+
+  .app .plate {
+    width: 85%;
+    padding: 12px;
+    display: block;
+    margin: 20px auto;
+  }
 }
